2001-03-04 11:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mml.el (mml-preview): Disable local map.

	* gnus-sum.el (gnus-summary-make-menu-bar): Make
	gnus-article-post-menu here.
	
	* gnus-art.el (gnus-article-make-menu-bar): Make summary-menu bar
	if it has not been made.

2001-03-02 02:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-article-describe-key): Map key to event.
	(gnus-article-describe-key-briefly): Ditto

2001-03-01 23:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-sum.el (gnus-summary-limit-include-expunged): Fix.

2001-03-01 22:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>
	From Katsumi Yamaoka <yamaoka@jpl.org>.
	
	* dgnushack.el (coerce, merge, subseq): defmacro.
	
2001-03-01 22:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* lpath.el (nndraft-request-group): Move it here from nndraft.el.
	A fake defalias in nndraft.el results a not-activated bug in
	uncompiled versions.

2001-02-26 11:27:27  Paul Jarc  <prj@po.cwru.edu>
	Committed by ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-util.el (gnus-split-references): Handle malformed References:.

2001-02-26 08:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-article-mime-part-status): 1 part.

2001-02-25 10:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>
	From NAGY Andras <nagya@inf.elte.hu>.

	* gnus.el (gnus-parameters): Typo.

2001-02-24 00:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus.el (gnus-read-method): Remove redundancy.

2001-02-23 23:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnslashdot.el (nnslashdot-backslash-url): New.
	(nnslashdot-request-list): Use it.

2001-02-23 22:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnml.el (nnml-generate-active-info): Fix the case when there is
	no file.

	* gnus-sum.el (gnus-summary-import-article): Display it. Enable edit. 
	(gnus-summary-create-article): New.

	* gnus-group.el (gnus-group-mark-article-read): New.

	* gnus-msg.el (gnus-inews-do-gcc): Use it.
